Capture/Replay: Multi-Context Support
Add support for capturing and replaying multiple contexts.

1.) Create and initialize the Contexts in the share group during
SetupReplay().
2.) Track the Context the command stream is for, and if the Context ID
changes, inject an eglMakeCurrent() call to switch to the new Context.
3.) Intercept eglCreateContext() and eglMakeCurrent() to route to either
EGLWindow or WGLWindow, depending on the current platform.

Specifically, this enables capturing and replaying Asphalt 9.

Bug: angleproject:5878
Change-Id: I5bc9b7ece5388ce405ba3f9e9dc3967e78662000
Reviewed-on: https://chromium-review.googlesource.com/c/angle/angle/+/2830145
Commit-Queue: Tim Van Patten <timvp@google.com>
Reviewed-by: Jamie Madill <jmadill@chromium.org>
Reviewed-by: Cody Northrop <cnorthrop@google.com>

--- a/src/tests/restricted_traces/BUILD.gn
+++ b/src/tests/restricted_traces/BUILD.gn
@@ -21,7 +21,10 @@ angle_shared_library("angle_restricted_trace_loader") {
 
 angle_trace_fixture("angle_restricted_trace_fixture") {
   gl_header = "angle_trace_gl.h"
-  public_deps = [ ":angle_restricted_trace_loader" ]
+  public_deps = [
+    ":angle_restricted_trace_loader",
+    "$angle_root/util:angle_util",
+  ]
   public_configs = [ "$angle_root:no_gl_prototypes" ]
 }
 
