--- a/BUILD.gn
+++ b/BUILD.gn
@@ -530,6 +530,14 @@ template("translator_lib") {
     _needs_glsl_and_vulkan_base = false
     _uses_spirv = false
 
+    # Frontend support:
+    if (angle_enable_desktop_glsl) {
+      sources += angle_translator_glsl_symbol_table_sources
+    } else {
+      sources += angle_translator_essl_symbol_table_sources
+    }
+
+    # Backend support:
     if (angle_enable_essl || use_fuzzing_engine) {
       _needs_glsl_base = true
       sources += angle_translator_essl_sources
