--- a/src/compiler.gni
+++ b/src/compiler.gni
@@ -350,17 +350,15 @@ angle_translator_lib_vulkan_sources = [
   "src/compiler/translator/tree_ops/vulkan/RewriteR32fImages.cpp",
   "src/compiler/translator/tree_ops/vulkan/RewriteR32fImages.h",
 ]
-if (is_android) {
-  angle_translator_sources += [
-    "src/compiler/translator/ImmutableString_ESSL_autogen.cpp",
-    "src/compiler/translator/SymbolTable_ESSL_autogen.cpp",
-  ]
-} else {
-  angle_translator_sources += [
-    "src/compiler/translator/ImmutableString_autogen.cpp",
-    "src/compiler/translator/SymbolTable_autogen.cpp",
-  ]
-}
+
+angle_translator_essl_symbol_table_sources = [
+  "src/compiler/translator/ImmutableString_ESSL_autogen.cpp",
+  "src/compiler/translator/SymbolTable_ESSL_autogen.cpp",
+]
+angle_translator_glsl_symbol_table_sources = [
+  "src/compiler/translator/ImmutableString_autogen.cpp",
+  "src/compiler/translator/SymbolTable_autogen.cpp",
+]
 
 angle_translator_lib_metal_sources = [
   "src/compiler/translator/TranslatorMetal.cpp",
