--- a/src/tests/BUILD.gn
+++ b/src/tests/BUILD.gn
@@ -243,6 +243,7 @@ if (is_win || is_linux || is_chromeos || is_android || is_fuchsia || is_apple) {
 
     deps = [
       ":angle_common_test_utils_shared",
+      "$angle_root:angle_gl_enum_utils",
       "$angle_root:angle_image_util",
     ]
 
