Capture/Replay: Isolate trace export definitions.
This small fix to the export header means we no longer include
the "restricted_traces_autogen.h" in each and every trace file.
That means when we change/add/remove a trace we no longer need to
recompile each and every trace. Speeds up iteration time when
working with the traces.

Also fixes inconsistent path generation on Windows.

Bug: angleproject:5133
Change-Id: I357d65477a683455d01379379e2e98431af2ed55
Reviewed-on: https://chromium-review.googlesource.com/c/angle/angle/+/3110749
Reviewed-by: Cody Northrop <cnorthrop@google.com>
Reviewed-by: Tim Van Patten <timvp@google.com>
Commit-Queue: Jamie Madill <jmadill@chromium.org>

--- a/src/tests/restricted_traces/BUILD.gn
+++ b/src/tests/restricted_traces/BUILD.gn
@@ -9,6 +9,7 @@ import("../../../gni/angle.gni")
 angle_shared_library("angle_restricted_trace_loader") {
   sources = [
     "restricted_traces_autogen.h",
+    "restricted_traces_export.h",
     "trace_egl_loader_autogen.cpp",
     "trace_egl_loader_autogen.h",
     "trace_gles_loader_autogen.cpp",
@@ -52,6 +53,7 @@ angle_shared_library("angle_restricted_traces") {
   sources = [
     "restricted_traces_autogen.cpp",
     "restricted_traces_autogen.h",
+    "restricted_traces_export.h",
   ]
 
   data_deps = _traces
