Refactor EGLMultiThreadSteps.h -> MultiThreadSteps.h
The class ThreadSynchronization is very useful when synchronizing
multiple threads in ANGLE tests, so it's being moved from
egl_tests/EGLMultiThreadSteps.h to test_utils/MultiThreadSteps.h.

Bug: angleproject:5971
Change-Id: I5df469aa68b79cf72d95e0276f42ab33a091314e
Reviewed-on: https://chromium-review.googlesource.com/c/angle/angle/+/3111887
Reviewed-by: Ian Elliott <ianelliott@google.com>
Reviewed-by: Jamie Madill <jmadill@chromium.org>
Commit-Queue: Tim Van Patten <timvp@google.com>

--- a/src/tests/BUILD.gn
+++ b/src/tests/BUILD.gn
@@ -109,6 +109,7 @@ template("angle_common_test_utils") {
     ]
     sources = [
       "$angle_root/third_party/renderdoc/src/renderdoc_app.h",
+      "test_utils/MultiThreadSteps.h",
       "test_utils/RenderDoc.cpp",
       "test_utils/RenderDoc.h",
       "test_utils/angle_test_configs.cpp",
