Tests: Add Scrabble Go trace
Test: angle_perftests --gtest_filter="*scrabble_go*"
Bug: b/197580447
Bug: angleproject:6308
Change-Id: I624c5f201dbadb6b51fe39cbb832da2454c3cb39
Reviewed-on: https://chromium-review.googlesource.com/c/angle/angle/+/3114492
Commit-Queue: Jamie Madill <jmadill@chromium.org>
Reviewed-by: Jamie Madill <jmadill@chromium.org>

--- a/src/tests/restricted_traces/restricted_traces_autogen.gni
+++ b/src/tests/restricted_traces/restricted_traces_autogen.gni
@@ -4333,6 +4333,45 @@ angle_restricted_traces = [
     "sakura_school_simulator/sakura_school_simulator_capture_context2.angledata.gz",
   ],
   [
+    "scrabble_go",
+    2,
+    [
+      "scrabble_go/scrabble_go_capture_context2_frame001.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame002.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame003.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame004.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame005.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame006.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame007.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame008.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame009.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame010.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame011.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame012.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame013.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame014.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame015.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame016.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame017.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame018.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame019.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame020.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame021.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame022.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame023.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame024.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame025.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame026.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame027.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame028.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame029.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame030.cpp",
+      "scrabble_go/scrabble_go_capture_context2_frame031.cpp",
+      "scrabble_go/scrabble_go_capture_shared.cpp",
+    ],
+    "scrabble_go/scrabble_go.angledata.gz",
+  ],
+  [
     "shadow_fight_2",
     1,
     [
