--- a/src/tests/restricted_traces/.gitignore
+++ b/src/tests/restricted_traces/.gitignore
@@ -77,6 +77,7 @@ romancing_saga/
 rope_hero_vice_town/
 saint_seiya_awakening/
 sakura_school_simulator/
+scrabble_go/
 shadow_fight_2/
 slingshot_test1/
 slingshot_test2/
