Tests: Add Wordscapes trace
Test: angle_perftests --gtest_filter="*wordscapes*"
Tbr: jmadill@google.com, timvp@google.com
Bug: b/197646838
Bug: angleproject:6310
Change-Id: Idb5b8fe7e30f93ab0da0a749ee691eaeed4eac63
Reviewed-on: https://chromium-review.googlesource.com/c/angle/angle/+/3116367
Reviewed-by: Cody Northrop <cnorthrop@google.com>
Commit-Queue: Cody Northrop <cnorthrop@google.com>

--- a/src/tests/restricted_traces/restricted_traces_autogen.gni
+++ b/src/tests/restricted_traces/restricted_traces_autogen.gni
@@ -5367,6 +5367,44 @@ angle_restricted_traces = [
     "whatsapp/whatsapp_capture_context1.angledata.gz",
   ],
   [
+    "wordscapes",
+    3,
+    [
+      "wordscapes/wordscapes_capture_context3_frame001.cpp",
+      "wordscapes/wordscapes_capture_context3_frame002.cpp",
+      "wordscapes/wordscapes_capture_context3_frame003.cpp",
+      "wordscapes/wordscapes_capture_context3_frame004.cpp",
+      "wordscapes/wordscapes_capture_context3_frame005.cpp",
+      "wordscapes/wordscapes_capture_context3_frame006.cpp",
+      "wordscapes/wordscapes_capture_context3_frame007.cpp",
+      "wordscapes/wordscapes_capture_context3_frame008.cpp",
+      "wordscapes/wordscapes_capture_context3_frame009.cpp",
+      "wordscapes/wordscapes_capture_context3_frame010.cpp",
+      "wordscapes/wordscapes_capture_context3_frame011.cpp",
+      "wordscapes/wordscapes_capture_context3_frame012.cpp",
+      "wordscapes/wordscapes_capture_context3_frame013.cpp",
+      "wordscapes/wordscapes_capture_context3_frame014.cpp",
+      "wordscapes/wordscapes_capture_context3_frame015.cpp",
+      "wordscapes/wordscapes_capture_context3_frame016.cpp",
+      "wordscapes/wordscapes_capture_context3_frame017.cpp",
+      "wordscapes/wordscapes_capture_context3_frame018.cpp",
+      "wordscapes/wordscapes_capture_context3_frame019.cpp",
+      "wordscapes/wordscapes_capture_context3_frame020.cpp",
+      "wordscapes/wordscapes_capture_context3_frame021.cpp",
+      "wordscapes/wordscapes_capture_context3_frame022.cpp",
+      "wordscapes/wordscapes_capture_context3_frame023.cpp",
+      "wordscapes/wordscapes_capture_context3_frame024.cpp",
+      "wordscapes/wordscapes_capture_context3_frame025.cpp",
+      "wordscapes/wordscapes_capture_context3_frame026.cpp",
+      "wordscapes/wordscapes_capture_context3_frame027.cpp",
+      "wordscapes/wordscapes_capture_context3_frame028.cpp",
+      "wordscapes/wordscapes_capture_context3_frame029.cpp",
+      "wordscapes/wordscapes_capture_context3_frame030.cpp",
+      "wordscapes/wordscapes_capture_shared.cpp",
+    ],
+    "wordscapes/wordscapes.angledata.gz",
+  ],
+  [
     "world_of_tanks_blitz",
     1,
     [
