Tests: Add World of Kings trace
Test: angle_perftests --gtest_filter="*world_of_kings*"
Tbr: timvp@google.com, jmadill@chromium.org
Bug: b/198101940
Bug: angleproject:6339
Change-Id: Id19ebe19d6a3dee3bc7c1c59801e7b9a4dc4fdb2
Reviewed-on: https://chromium-review.googlesource.com/c/angle/angle/+/3127943
Reviewed-by: Cody Northrop <cnorthrop@google.com>
Commit-Queue: Cody Northrop <cnorthrop@google.com>

--- a/src/tests/restricted_traces/restricted_traces_autogen.gni
+++ b/src/tests/restricted_traces/restricted_traces_autogen.gni
@@ -5405,6 +5405,74 @@ angle_restricted_traces = [
     "wordscapes/wordscapes.angledata.gz",
   ],
   [
+    "world_of_kings",
+    3,
+    [
+      "world_of_kings/world_of_kings_capture_context3_frame001.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame002.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame003.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame004.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame005.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame006.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame007.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame008.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame009.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame010.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame011.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame012.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame013.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame014.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame015.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame016.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame017.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame018.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame019.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame020.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame021.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame022.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame023.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame024.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame025.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame026.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame027.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame028.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame029.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame030.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame031.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame032.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame033.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame034.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame035.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame036.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame037.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame038.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame039.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame040.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame041.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame042.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame043.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame044.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame045.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame046.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame047.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame048.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame049.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame050.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame051.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame052.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame053.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame054.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame055.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame056.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame057.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame058.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame059.cpp",
+      "world_of_kings/world_of_kings_capture_context3_frame060.cpp",
+      "world_of_kings/world_of_kings_capture_shared.cpp",
+    ],
+    "world_of_kings/world_of_kings.angledata.gz",
+  ],
+  [
     "world_of_tanks_blitz",
     1,
     [
