--- a/src/tests/restricted_traces/BUILD.gn
+++ b/src/tests/restricted_traces/BUILD.gn
@@ -95,7 +95,7 @@ group("angle_restricted_trace_gold_tests") {
   data = [
     "restricted_trace_gold_tests.py",
     "restricted_traces.json",
-    "skia_gold/",
+    "../skia_gold/",
     "//build/skia_gold_common/",
     "//testing/scripts/common.py",
     "//testing/xvfb.py",
