Tests: Add Words With Friends 2 trace
Test: angle_perftests --gtest_filter="*words_with_friends_2*"
Tbr: jmadill@google.com, timvp@google.com
Bug: b/198232783
Bug: angleproject:6348
Change-Id: Iacb62540b8680574dc34b7fa299948dd56c76074
Reviewed-on: https://chromium-review.googlesource.com/c/angle/angle/+/3132340
Reviewed-by: Cody Northrop <cnorthrop@google.com>
Commit-Queue: Cody Northrop <cnorthrop@google.com>

--- a/src/tests/restricted_traces/restricted_traces_autogen.gni
+++ b/src/tests/restricted_traces/restricted_traces_autogen.gni
@@ -5367,6 +5367,44 @@ angle_restricted_traces = [
     "whatsapp/whatsapp_capture_context1.angledata.gz",
   ],
   [
+    "words_with_friends_2",
+    1,
+    [
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame001.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame002.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame003.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame004.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame005.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame006.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame007.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame008.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame009.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame010.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame011.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame012.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame013.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame014.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame015.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame016.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame017.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame018.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame019.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame020.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame021.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame022.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame023.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame024.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame025.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame026.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame027.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame028.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame029.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_context1_frame030.cpp",
+      "words_with_friends_2/words_with_friends_2_capture_shared.cpp",
+    ],
+    "words_with_friends_2/words_with_friends_2.angledata.gz",
+  ],
+  [
     "wordscapes",
     3,
     [
